tests/snapshots/assets__check_file@code.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/code.typ
---
#text(```typ
Test single arguments
```)
