tests/snapshots/assets__check_file@content.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/content.typ
snapshot_kind: text
---
#[
    123123123
]123

a#emph[abc]d
_123_

#1231231

#false

#none

#auto
