tests/snapshots/assets__check_file@content.typ-40.snap
---
source: tests/assets.rs
expression: doc_40
input_file: tests/assets/content.typ
---
#[
  123123123
]123

a#emph([abc])d
_123_

#1231231

#false

#none

#auto

